CHG: remove unused imports
Signed-off-by: Francisco Collao Garate <pcollaog@gmail.com>